k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: botri-sovrastva
spec:
  selector:
    app: botri-sovrastva
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7001
