k8s/ingress-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botri-sovrastva-ingress-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: http://mato.k8s.djnd.si/botri-sovrastva/
spec:
  rules:
  - host: mato.k8s.djnd.si
    http:
      paths:
      - path: /botri-sovrastva
        pathType: Exact
        backend:
          service:
            name: botri-sovrastva
            port:
              number: 80
